@@ -344,7 +344,7 @@ public:
 
 			std::string str;
 			cmd.FindCommand(1,str);
-#if C_DIRECTLPT			
+#if C_DIRECTLPT
 			if(str=="reallpt") {
 				CDirectLPT* cdlpt= new CDirectLPT(i, defaultirq[i],&cmd);
 				if(cdlpt->InstallationSuccessful)
